--- a/templates/collection.html
+++ b/templates/collection.html
@@ -76,7 +76,7 @@
                 <div id="main-content-inner">
                     <section>
                         <div class="page-header">
-                            <h1>Collection Synchronization</h1>
+                            <h1>Collection Synchronization [EXPERIMENTAL-STILL-IN-DEVELOPMENT]</h1>
                             <p class="subtitle">Sync your local song embeddings with a centralized Pocketbase server.</p>
                         </div>
                     </section>
