Song Path label fix - #59

--- a/templates/path.html
+++ b/templates/path.html
@@ -101,7 +101,7 @@
                         </div>
 
                         <div>
-                            <label for="max_steps">Max number of songs in path:</label>
+                            <label for="max_steps">Songs in path:</label>
                             <input type="number" id="max_steps" name="max_steps" value="25" min="10" max="200">
                         </div>
                     </div>
